# DKL

./: README.md  pyproject.toml
models/: ideal_gp_checkpoint.pth  learned_gp_checkpoint.pth  naive_gp_checkpoint.pth
notebooks/: DKL_learning.ipynb
script/: run.py
src/DKL/data/: dataset.py  transformations.py
src/DKL/models/: kernel.py  normalizing_flow.py
src/DKL/training/: early_stopping.py  extra_trainer.py  main_trainer.py
src/DKL/utils/: display.py
tests/: DKL_learning.ipynb
