[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DKL"  # 
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "gstlearn",
    "properscoring",
    "gpytorch",
    "matplotlib",
    "tqdm"
]

[tool.hatch.build.targets.wheel]
packages = ["DKL"]
