[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DKL"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "gstlearn",
    "properscoring",
    "gpytorch",
    "matplotlib",
    "tqdm"
]

[tool.hatch.build.targets.wheel]
# On indique que le package DKL se trouve à l'intérieur de src/
packages = ["src/DKL"]

[tool.hatch.build.targets.editable]
# Indispensable pour le mode éditable (pip install -e .)
path = "."